# spectacular

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  package.json  requirements.txt  vercel.json
d3-parkour/pages/: _app.js  index-glitch.js  index-particle.js  index-water.js  index.js  intro.js
d3-parkour/public/css/: glitch.css  plugins.css  style.css  test.css
d3-parkour/src/components/: AnimationText.js  News.js  circleProgress.js  progressBar.js  sliderProps.js
d3-parkour/src/layout/: footer.js  header.js  layout.js  left-right-bar.js  magic-cursor.js  mobilemenu.js  modalbox.js  top-bar.js
d3-parkour/src/plugin/: lightGalleryOptions.js  plugin.js  svg.js
d3-parkour/styles/: globals.css
d3-precursor/: README.md  precursor.md  requirements.txt  setup.py
d3-precursor/docs/: tasks.md
d3-precursor/scripts/: process_codebase.py
d3-precursor/src/: __init__.py
d3-precursor/src/cli/: __init__.py  colors.py  commands.py  main.py  progress.py
d3-precursor/src/code_gen/: __init__.py  generator.py  templates.py
d3-precursor/src/embeddings/: __init__.py  encoder.py  index.py  multimodal.py  retrieval.py
d3-precursor/src/extractors/: __init__.py  api_extractor.py  concept_extractor.py  pattern_extractor.py  relation_extractor.py
d3-precursor/src/knowledge_base/: __init__.py  query.py  schema.py  storage.py
d3-precursor/src/llm/: __init__.py  anthropic.py  base.py  openai.py  prompt_templates.py
d3-precursor/src/parsers/: __init__.py  doc_parser.py  example_parser.py  js_parser.py  py_parser.py
d3-precursor/src/processors/: __init__.py  chunk_processor.py  code_processor.py  doc_processor.py
d3-receptor/: package-lock.json  package.json  vite.config.ts
d3-receptor/docs/: tasks.md
d3-receptor/src/: App.css  App.tsx  index.css  main.tsx
docs/: Gemfile  _config.yml  api-reference.md  cognitive-architecture.md  index.html  index.md  mzekezeke-network.md  pretoria-rules.md  script.js  styles.css  zengeza-mdp.md
docs/modules/: diadochi.html
docs/tutorials/: getting-started.md
scripts/: add-model.sh
spectacular/: __init__.py  config.py  diadochi.py  hf_integration.py  main.py  mzekezeke.py  nicotine.py  orchestrator.py  pretoria.py  zengeza.py
src/: autobahn_client.rs  biological.rs  config.rs  core.rs  data.rs  error.rs  hf_integration.rs  js_engine.rs  lib.rs  main.rs  molecular_renderer.rs  orchestrator_client.rs  pretoria.rs
src/chigutiro/: algorithms.rs  benchmark.rs  chart_redraw.rs  coordinator.rs  core.rs  dimension.rs  filter.rs  group.rs  index.rs  mod.rs  tests.rs
(+57 files in other folders)
